--- a/docs/discipline/submitting-infractions.mdx
+++ b/docs/discipline/submitting-infractions.mdx
@@ -1,139 +1,150 @@
 ---
-title: Submitting Infractions
-description: How to document discipline infractions in Levelset
+title: How to Submit an Infraction
+description: Step-by-step guide to documenting discipline infractions
 ---
 
-# Submitting Infractions
+# How to Submit an Infraction
 
-When a team member violates a policy or expectation, document it as an infraction in Levelset. This guide walks through the process.
+This guide explains how to properly document a discipline infraction in Levelset.
 
-## Before You Submit
+## Before You Document
+
+### Talk to the Employee First
 
 <Warning>
-Only document infractions that have been addressed with the team member. The infraction record should reflect a conversation that has already happened.
+Always address the issue with the employee before documenting. The infraction record should document a conversation that already happened.
 </Warning>
 
-### Consider
+Before submitting an infraction, you should have:
+- Spoken directly with the employee about the incident
+- Explained what policy was violated
+- Given them a chance to respond
+- Clarified expectations going forward
 
-- Has the behavior been clearly communicated as an expectation?
-- Did you address the issue directly with the team member?
-- Is this the appropriate infraction type for what occurred?
+### Choose the Right Infraction Type
 
-## Accessing the Infraction Form
+Your organization has defined specific infraction types. Common examples include:
 
-### Via Mobile PWA
+- Tardiness
+- Absence without notice
+- Uniform violation
+- Policy violation
+- Safety violation
 
-1. Open the Levelset PWA
-2. Navigate to the discipline section
-3. Tap **Submit Infraction** or the add button
+Make sure you select the type that accurately describes what happened.
 
-### Via Dashboard
-
-1. Go to the Discipline Dashboard
-2. Click **Add Infraction** or find the employee and add from their record
-
-## Submitting an Infraction
+## How to Submit an Infraction
 
 <Steps>
-  <Step title="Select Employee">
-    Choose the team member who committed the infraction from the dropdown.
+  <Step title="Access the Infraction Form">
+    You can submit infractions from:
+    - The Discipline Dashboard (click Add Infraction)
+    - The mobile app
   </Step>
   
-  <Step title="Select Infraction Type">
-    Choose the type of infraction from the list configured by your organization. Common types include:
-    - Tardiness
-    - No Call No Show
-    - Uniform Violation
-    - Policy Violation
-    - Insubordination
+  <Step title="Select the Employee">
+    Choose the team member from the dropdown list.
   </Step>
   
-  <Step title="Enter Date">
-    Select the date the infraction occurred. This should be the actual date of the incident, not today's date (unless they're the same).
+  <Step title="Select the Infraction Type">
+    Pick the type that best matches what happened. Each type has a point value that will be added to their total.
   </Step>
   
-  <Step title="Add Notes">
-    Provide specific details about what happened:
-    - What exactly occurred?
-    - When did it happen?
-    - Were there witnesses?
-    - What was said in the conversation with the team member?
+  <Step title="Enter the Date">
+    Select the date the incident occurred. This should be the actual date of the incident, not necessarily today.
+  </Step>
+  
+  <Step title="Write Detailed Notes">
+    Document what happened. Be specific and factual.
   </Step>
   
   <Step title="Submit">
-    Review the information and submit. The infraction will be added to the employee's record.
+    Review everything and submit. You may need to enter a password if your organization requires it.
   </Step>
 </Steps>
 
-## Password Protection
-
-Your organization may require a password to submit infractions. This adds a layer of accountability. Enter the discipline password when prompted.
-
-<Tip>
-If you don't know the discipline password, check with your administrator or look in Organization Settings under Discipline Access.
-</Tip>
-
 ## Writing Good Notes
 
-Effective infraction notes are:
+The notes you write become part of the permanent record. Good documentation is:
 
-<CardGroup cols={2}>
-  <Card title="Specific" icon="bullseye">
-    Include exact times, locations, and behaviors. "Arrived at 2:15pm for 2:00pm shift" not "Was late."
-  </Card>
-  
-  <Card title="Factual" icon="check">
-    Describe what happened, not your interpretation. Avoid emotional language.
-  </Card>
-  
-  <Card title="Complete" icon="list-check">
-    Include relevant context that might be important later.
-  </Card>
-  
-  <Card title="Professional" icon="briefcase">
-    Write as if the note might be read in a formal setting.
-  </Card>
-</CardGroup>
+### Specific
 
-### Example Notes
+**Good**: "Arrived at 2:15 PM for a 2:00 PM scheduled shift (15 minutes late)"  
+**Bad**: "Was late again"
 
-<Accordion title="Good Example">
-"Team member arrived at 2:15pm for scheduled 2:00pm shift. This is the third late arrival this month. Discussed importance of punctuality and impact on team. Team member acknowledged and committed to arriving on time."
+### Factual
+
+**Good**: "Employee was on personal phone call during service, did not respond to guest for approximately 2 minutes"  
+**Bad**: "Employee doesn't care about guests"
+
+### Complete
+
+Include relevant context:
+- What exactly happened
+- When and where it occurred
+- Who was involved or witnessed it
+- What was said in your conversation with the employee
+
+### Professional
+
+Write as if this note might be read by HR, lawyers, or the employee themselves. Keep it objective and avoid emotional language.
+
+## Example Notes
+
+<Accordion title="Good Example - Tardiness">
+"Employee arrived at 2:15 PM for scheduled 2:00 PM shift. This is the third late arrival in the past two weeks. When asked about the tardiness, employee explained traffic was bad. Reviewed importance of arriving on time and the impact on the team. Employee acknowledged and committed to leaving earlier for future shifts."
 </Accordion>
 
-<Accordion title="Poor Example">
-"Late again. Talked to them about it."
+<Accordion title="Good Example - Policy Violation">
+"During dinner rush, observed employee eating fries from the food line. When addressed, employee stated they were 'just checking quality.' Reviewed policy that team members may not eat food from the line. Employee understood and apologized."
 </Accordion>
 
-## After Submitting
+<Accordion title="Bad Example">
+"Late again. Third time this month. Talked to them."
 
-Once submitted:
+*This lacks specific times, dates, and details about the conversation.*
+</Accordion>
 
-- The infraction appears in the employee's discipline history
-- Points are added to their total
-- The system may recommend a disciplinary action based on thresholds
-- Leadership can view the infraction in the dashboard
+## Password Protection
 
-## Following Up
+Your organization may require a password to submit infractions. This ensures accountability.
 
-After documenting an infraction, consider:
+- Enter the password when prompted
+- If you don't know it, check with your administrator
+- The password is configured in Organization Settings
 
-1. **Check the recommended action** - Has the employee reached a threshold requiring formal action?
-2. **Document the action** - If a warning is given, record it
-3. **Follow up** - Monitor for improvement or repeated issues
+## What Happens After You Submit
+
+1. **Points are added** to the employee's total
+2. **The system checks** if they've reached a threshold
+3. **The infraction appears** in their discipline history
+4. **Recommended actions** are updated if a threshold was reached
 
 ## Troubleshooting
 
 <AccordionGroup>
   <Accordion title="I selected the wrong infraction type">
-    Contact your administrator to have the infraction corrected or removed.
+    Contact your administrator. Infractions can be corrected if there was an error.
   </Accordion>
   
-  <Accordion title="I can't find an infraction type">
-    The available types are configured in Organization Settings. Ask your administrator to add the type if needed.
+  <Accordion title="The infraction type I need doesn't exist">
+    Infraction types are configured in Organization Settings. Ask your administrator to add the type you need.
   </Accordion>
   
   <Accordion title="The password isn't working">
-    Verify you're entering the correct discipline password. Check with your administrator if you're unsure.
+    Double-check you're entering it correctly. The discipline form password is set in Organization Settings → Discipline Access.
+  </Accordion>
+  
+  <Accordion title="An employee isn't showing in the list">
+    Make sure they're marked as Active in the roster and assigned to your location.
   </Accordion>
 </AccordionGroup>
+
+## After Documenting
+
+Follow up appropriately:
+
+1. **Check the recommended action** - Has the employee reached a new threshold?
+2. **Take action if needed** - Deliver verbal/written warnings as recommended
+3. **Document the action** - Record that you delivered the warning
+4. **Monitor going forward** - Watch for improvement or repeated issues
