--- a/docs/getting-started/introduction.mdx
+++ b/docs/getting-started/introduction.mdx
@@ -1,85 +1,108 @@
 ---
 title: Introduction to Levelset
-description: Learn the core concepts and how to navigate the Levelset platform
+description: Learn the basics of Levelset before you start
 ---
 
 # Introduction to Levelset
 
-This guide will help you understand the core concepts of Levelset and how to navigate the platform effectively.
+This guide explains the key concepts you need to understand before using Levelset.
 
-## Core Concepts
+## How Levelset Is Organized
 
 ### Organizations and Locations
 
-Levelset is organized into a hierarchy:
+Levelset uses a two-level structure:
 
-- **Organization** - Your company or franchise group (e.g., "Reece Howard Organization")
-- **Locations** - Individual restaurants within your organization (e.g., "CFA Buda", "CFA West Buda")
+- **Organization** - Your company (you might have one or several locations)
+- **Location** - An individual restaurant or site within your organization
 
-Settings and configurations can be managed at the organization level and apply to all locations.
+When you log in, you'll select which location you want to work with. Settings configured at the organization level apply to all locations.
 
-### Roles and Permissions
+### Your Role
 
-Levelset uses a role-based system to control access:
+Your role determines what you can see and do in Levelset. Common roles include:
 
-| Role | Description |
-|------|-------------|
-| **Operator** | Full access to all features and settings |
-| **Executive/Director** | Leadership access with management capabilities |
-| **Team Lead** | Can submit ratings and view team data |
-| **Trainer** | Can submit ratings for positions they train |
-| **Team Member** | Limited access (primarily for mobile features) |
+| Role Type | What You Can Do |
+|-----------|----------------|
+| **Owner/Operator** | Full access to everything |
+| **Leadership** | Submit ratings, manage discipline, view reports |
+| **Supervisor** | Submit ratings for positions you oversee |
+| **Team Member** | Limited access (mobile features only) |
 
-Your organization can customize role names and the hierarchy to match your structure.
+<Note>
+Your organization may use different role names. The permission level is what matters.
+</Note>
 
-### Key Features
+## The Four Main Features
 
-<AccordionGroup>
-  <Accordion title="Positional Excellence">
-    Rate team members on their performance in specific positions. Each position has 5 customizable rating criteria. Ratings are tracked over time to identify trends and growth opportunities.
-  </Accordion>
-  
-  <Accordion title="Discipline Dashboard">
-    Document infractions and track progressive discipline. The system automatically calculates point totals and recommends appropriate actions based on your organization's discipline policy.
-  </Accordion>
-  
-  <Accordion title="Roster Management">
-    Keep your employee roster up to date with information like:
-    - Names and contact information
-    - Current role and hire date
-    - FOH/BOH assignment
-    - Availability status
-    - Certification progress
-  </Accordion>
-  
-  <Accordion title="Organization Settings">
-    Configure how Levelset works for your organization:
-    - Define positions and their descriptions
-    - Customize rating criteria for each position
-    - Set up role hierarchies and permissions
-    - Manage user access to the dashboard
-  </Accordion>
-</AccordionGroup>
+### 1. Positional Excellence
 
-## Navigation
+Rate team members on how well they perform in specific positions (like "Drive-Thru" or "Kitchen").
 
-### Main Navigation
+- Each position has 5 rating criteria
+- Ratings use a 1-3 scale (Not Yet → On the Rise → Crushing It)
+- The system tracks averages over time
 
-The top navigation bar provides access to the main sections:
+### 2. Discipline
 
-- **Home** - Dashboard overview with key metrics
-- **Positional Excellence** - Rating tables and analytics
-- **Discipline** - Infraction tracking and discipline dashboard
-- **Roster** - Employee management
+Document infractions when team members violate policies.
+
+- Each infraction type has a point value
+- Points accumulate and trigger recommended actions
+- Everything is documented for consistency
+
+### 3. Roster
+
+Keep your employee list up to date.
+
+- Add and remove employees
+- Update roles and information
+- Track who works in which areas (FOH/BOH)
+
+### 4. Organization Settings
+
+Configure how Levelset works for your team.
+
+- Define positions and rating criteria
+- Set up the role hierarchy
+- Manage who has dashboard access
+
+## Navigating Levelset
+
+### Top Navigation Bar
+
+The menu at the top of every page includes:
+
+- **Levelset logo** - Click to go home
+- **Main sections** - Home, Positional Excellence, Discipline, Roster
+- **Location selector** - Switch between locations (if you have access to multiple)
+- **Help icon** - Access this documentation
+- **Profile menu** - Access settings and log out
 
 ### Location Selector
 
-If you have access to multiple locations, use the location dropdown in the navigation bar to switch between them. Your selected location determines which data you see throughout the platform.
+If you work with multiple locations:
 
-### Organization Settings
+1. Click the location dropdown in the navigation bar
+2. Select the location you want to view
+3. All data on the page will update to show that location
 
-Click the profile icon in the top-right corner and select "Organization Settings" to access configuration options for positions, rating criteria, roles, and more.
+Your selection persists as you navigate between pages.
+
+## Mobile Access
+
+Levelset has a mobile-friendly web app for submitting ratings and infractions on the go.
+
+To access it:
+1. Open your mobile browser
+2. Go to your Levelset URL
+3. You can add it to your home screen for quick access
+
+<Tip>
+On iPhone: Tap Share → Add to Home Screen  
+On Android: Tap Menu → Add to Home Screen
+</Tip>
 
 ## Next Steps
 
-Ready to get started? Head to [First Login](/getting-started/first-login) to set up your account.
+Ready to start? Go to [First Login](/getting-started/first-login) to set up your account.
