--- a/docs/organization-settings/rating-criteria.mdx
+++ b/docs/organization-settings/rating-criteria.mdx
@@ -1,179 +1,146 @@
 ---
 title: Rating Criteria
-description: Define the Big 5 rating criteria for each position
+description: How to define the 5 rating criteria for each position
 ---
 
 # Rating Criteria
 
-Each position has 5 rating criteria (the "Big 5") that define what excellence looks like in that role. This guide covers how to set up and customize these criteria.
+Each position has 5 criteria that define what you're rating. This guide shows you how to set them up.
 
 ## Accessing Rating Criteria
 
 1. Go to **Organization Settings**
-2. Select **Positional Excellence** in the left menu
-3. Click the **Rating Criteria** tab
+2. Click **Positional Excellence** in the sidebar
+3. Select the **Rating Criteria** tab
 
-## Understanding Rating Criteria
+## How Criteria Work
 
 ### What Are Rating Criteria?
 
-Rating criteria are the specific skills or behaviors that leaders evaluate when rating a team member in a position. Each position has exactly 5 criteria.
+Criteria are the specific skills or behaviors you evaluate when rating someone. Each position has exactly 5 criteria.
 
-### Example: iPOS Criteria
+### Example: Register/iPOS
 
 | # | Criterion | What It Measures |
 |---|-----------|------------------|
-| 1 | Speed | How quickly orders are taken |
-| 2 | Accuracy | Order accuracy and attention to detail |
-| 3 | Guest Interaction | Friendliness and engagement |
-| 4 | Order Knowledge | Menu knowledge and suggestive selling |
-| 5 | Payment Handling | Cash and card transaction accuracy |
+| 1 | Speed | How quickly they process orders |
+| 2 | Accuracy | Order accuracy, correct items |
+| 3 | Guest Interaction | Friendliness, eye contact, engagement |
+| 4 | Menu Knowledge | Knows products, can make suggestions |
+| 5 | Payment Handling | Cash and card transactions |
 
 ## Setting Up Criteria
 
 <Steps>
-  <Step title="Select Position">
-    Use the dropdown at the top to select the position you want to configure. Positions are grouped by FOH and BOH.
+  <Step title="Select the Position">
+    Use the dropdown at the top to choose which position you're configuring.
   </Step>
   
   <Step title="Enter Criterion Names">
-    For each of the 5 criteria:
-    - Enter a short, clear name (e.g., "Speed", "Accuracy")
-    - Keep names concise - they appear in tables and forms
+    For each of the 5 slots:
+    - Enter a short, clear name
+    - Keep it to 1-3 words (e.g., "Speed", "Food Quality", "Team Support")
   </Step>
   
   <Step title="Add Descriptions">
-    For each criterion, add a description that explains:
+    For each criterion, write a description explaining:
     - What this criterion measures
-    - What excellence looks like
-    - Specific behaviors to look for
+    - What good performance looks like
+    - Specific behaviors to observe
   </Step>
   
   <Step title="Save">
-    Changes auto-save as you edit. When you switch positions or leave the page, your changes are preserved.
+    Changes auto-save when you click away or switch positions.
   </Step>
 </Steps>
 
 ## Writing Good Criterion Names
 
 <CardGroup cols={2}>
-  <Card title="Keep It Short" icon="scissors">
-    One or two words is ideal. "Speed" not "How quickly they complete tasks"
+  <Card title="Keep It Short" icon="minimize">
+    1-2 words is ideal. Names appear in tables and reports.
   </Card>
-  
   <Card title="Be Specific" icon="bullseye">
     "Order Accuracy" is better than "Quality"
   </Card>
-  
-  <Card title="Action-Oriented" icon="play">
-    Focus on observable behaviors
+  <Card title="Make It Observable" icon="eye">
+    Focus on things you can actually see and measure
   </Card>
-  
-  <Card title="Unique" icon="fingerprint">
+  <Card title="Keep Them Distinct" icon="code-branch">
     Each criterion should measure something different
   </Card>
 </CardGroup>
 
 ## Writing Good Descriptions
 
-Descriptions appear in the rating form to help leaders rate consistently.
+Descriptions appear in the rating form to help raters be consistent.
 
-### Good Description Example
+### What to Include
+
+1. **What you're measuring** - Be specific about the skill or behavior
+2. **What each level looks like** - Help raters know when to give a 1, 2, or 3
+3. **Examples** - Concrete behaviors to look for
+
+### Example Description
 
 ```
-Speed: Rate based on how quickly the team member processes 
-orders while maintaining accuracy. Consider line management, 
-payment speed, and ability to keep up during peak times.
+Speed
 
-3 - Crushing It: Consistently fast, never a bottleneck
-2 - On the Rise: Good pace with occasional slowdowns
-1 - Not Yet: Regularly causes delays in the line
+Rate how quickly the team member processes orders while maintaining quality.
+
+3 (Crushing It): Consistently fast, keeps the line moving, never a bottleneck
+2 (On the Rise): Good pace overall, occasional slowdowns during rushes
+1 (Not Yet): Regularly causes delays, struggles to keep up with line speed
+
+Look for: Order entry time, payment processing speed, ability to multitask
 ```
 
-### Description Tips
+## Common Criteria Categories
 
-- Explain what each rating level looks like
-- Include specific examples when helpful
-- Keep descriptions scannable (use short paragraphs)
-- Focus on observable behaviors, not attitudes
+Most positions include criteria from these categories:
 
-## Position-Specific Considerations
+| Category | Examples |
+|----------|----------|
+| **Speed/Efficiency** | Speed, Pace, Timing, Throughput |
+| **Quality** | Accuracy, Consistency, Attention to Detail |
+| **Standards** | Cleanliness, Safety, Following Procedures |
+| **People Skills** | Communication, Teamwork, Guest Interaction |
+| **Knowledge** | Product Knowledge, Systems, Problem Solving |
 
-Different positions need different criteria:
+## Updating Existing Criteria
 
-<Tabs>
-  <Tab title="FOH Positions">
-    Focus on:
-    - Guest interaction quality
-    - Speed and efficiency
-    - Order accuracy
-    - Teamwork and communication
-    - Cleanliness and presentation
-  </Tab>
-  
-  <Tab title="BOH Positions">
-    Focus on:
-    - Food quality and safety
-    - Speed and timing
-    - Following procedures
-    - Waste management
-    - Station organization
-  </Tab>
-</Tabs>
+If you change criteria for a position that already has ratings:
 
-## Common Criteria Patterns
+- **Historical ratings** keep their original criterion labels
+- **New ratings** use the updated criteria
+- **Averages** continue to calculate normally
 
-While every position is different, some criteria appear frequently:
+<Tip>
+For minor wording improvements, just update the text. For major changes to what you're measuring, consider whether it makes sense to start fresh or keep the historical data.
+</Tip>
 
-| Criterion Type | Examples |
-|---------------|----------|
-| Speed/Efficiency | Speed, Pace, Timing, Efficiency |
-| Quality | Accuracy, Quality, Consistency |
-| Standards | Procedures, Safety, Cleanliness |
-| Teamwork | Communication, Support, Coordination |
-| Knowledge | Product Knowledge, Menu, Systems |
+## Positions Without Criteria
 
-## Modifying Existing Criteria
+If a position doesn't have criteria set up:
 
-When updating criteria for a position that already has ratings:
+- It **won't appear** in rating forms
+- You **can't submit ratings** for that position
+- You'll see 5 empty slots when you select it
 
-<Note>
-Changing criterion names or descriptions affects how future ratings are labeled but does not change historical data. Previous ratings keep their original criterion names.
-</Note>
-
-Consider:
-- Will the change confuse leaders?
-- Should you communicate the change to the team?
-- Is this a minor wording update or a fundamental change?
-
-## Empty Criteria
-
-If a position doesn't have criteria defined:
-
-1. Navigate to Rating Criteria
-2. Select the position
-3. You'll see 5 empty criterion slots
-4. Fill in each one with a name and description
-
-<Warning>
-Positions without rating criteria won't appear in the rating form. Make sure all positions have their Big 5 defined.
-</Warning>
+Always set up all 5 criteria for every position you want to rate.
 
 ## Troubleshooting
 
 <AccordionGroup>
-  <Accordion title="Criteria not showing in rating form">
-    Verify that:
-    - All 5 criteria have names (descriptions are optional but recommended)
-    - The position is correctly set up in the Positions tab
-    - The user has permission to rate that position
+  <Accordion title="Position isn't showing up in rating form">
+    Make sure all 5 criteria have names. Even if descriptions are optional, names are required for the position to be ratable.
   </Accordion>
   
-  <Accordion title="Wrong criteria showing for a position">
+  <Accordion title="Wrong criteria showing up">
     Double-check that you selected the correct position in the dropdown. Similar position names can be confusing.
   </Accordion>
   
-  <Accordion title="Description field not expanding">
-    The description field should auto-expand as you type. If it doesn't, try clicking into the field and pressing Enter to add lines.
+  <Accordion title="Criteria aren't saving">
+    Click outside the field to trigger auto-save. If the issue persists, refresh the page and try again.
   </Accordion>
 </AccordionGroup>
