--- a/docs/overview.mdx
+++ b/docs/overview.mdx
@@ -1,45 +1,65 @@
 ---
 title: Welcome to Levelset
-description: The complete team performance and management platform for restaurant operations
+description: Your complete guide to using Levelset for team performance management
 ---
 
 # Welcome to Levelset
 
-Levelset is a comprehensive team performance and management platform designed specifically for restaurant operations. It provides tools for tracking employee performance, managing discipline, and optimizing your team's development.
+Levelset helps you track team performance, manage discipline, and develop your employees. This guide will show you how to use every feature.
 
-## What is Levelset?
-
-Levelset helps restaurant leaders:
-
-- **Track Positional Excellence** - Rate team members on position-specific criteria to identify strengths and growth opportunities
-- **Manage Discipline** - Document and track infractions with a structured progressive discipline system
-- **Maintain Your Roster** - Keep employee information, roles, and statuses up to date
-- **Configure Your Organization** - Customize positions, rating criteria, roles, and more
-
-## Key Features
+## What Can You Do With Levelset?
 
 <CardGroup cols={2}>
-  <Card title="Positional Excellence" icon="star" href="/positional-excellence/overview">
-    Rate team members on their performance in specific positions using customizable criteria
+  <Card title="Rate Team Members" icon="star" href="/positional-excellence/overview">
+    Submit positional ratings to track how your team performs in different roles
   </Card>
-  <Card title="Discipline Dashboard" icon="scale-balanced" href="/discipline/overview">
-    Track infractions and manage progressive discipline with clear documentation
+  <Card title="Track Discipline" icon="clipboard-list" href="/discipline/overview">
+    Document infractions and follow a consistent discipline process
   </Card>
-  <Card title="Roster Management" icon="users" href="/roster-management/overview">
-    Manage employee information, roles, availability, and status
+  <Card title="Manage Your Roster" icon="users" href="/roster-management/overview">
+    Keep employee information, roles, and status up to date
   </Card>
-  <Card title="Organization Settings" icon="gear" href="/organization-settings/overview">
-    Configure positions, rating criteria, roles, and organizational preferences
+  <Card title="Configure Settings" icon="gear" href="/organization-settings/overview">
+    Customize positions, criteria, roles, and permissions for your organization
   </Card>
 </CardGroup>
 
-## Getting Started
+## Quick Start Guide
 
-New to Levelset? Start with these guides:
+<Steps>
+  <Step title="Log In">
+    Go to [app.levelset.io](https://app.levelset.io) and sign in with your email and password, or use Google Sign-In.
+  </Step>
+  
+  <Step title="Select Your Location">
+    If you have access to multiple locations, select the one you want to work with from the dropdown in the navigation bar.
+  </Step>
+  
+  <Step title="Start Using Levelset">
+    Navigate to any section using the menu at the top of the screen.
+  </Step>
+</Steps>
 
-1. **[Introduction](/getting-started/introduction)** - Learn about the core concepts and navigation
-2. **[First Login](/getting-started/first-login)** - Set up your account and explore the dashboard
+## Main Sections
 
-## Need Help?
+| Section | What It's For |
+|---------|---------------|
+| **Home** | See an overview of your team's performance metrics |
+| **Positional Excellence** | View ratings and track employee progress |
+| **Discipline** | Manage infractions and disciplinary actions |
+| **Roster** | View and edit employee information |
+| **Settings** | Configure how Levelset works for your organization |
 
-If you have questions or need assistance, reach out to your organization's Levelset administrator or contact support at [support@levelset.io](mailto:support@levelset.io).
+## Getting Help
+
+- **Contact your administrator** for questions about your organization's settings
+- **Email support@levelset.io** for technical issues
+- **Use this documentation** to learn how each feature works
+
+## Next Steps
+
+New to Levelset? Start here:
+
+1. [Introduction](/getting-started/introduction) - Learn the basics
+2. [First Login](/getting-started/first-login) - Set up your account
+3. [Positional Excellence](/positional-excellence/overview) - Start rating your team
