--- a/docs/positional-excellence/submitting-ratings.mdx
+++ b/docs/positional-excellence/submitting-ratings.mdx
@@ -1,106 +1,137 @@
 ---
-title: Submitting Ratings
-description: How to submit positional ratings for team members
+title: How to Submit Ratings
+description: Step-by-step guide to rating team members
 ---
 
-# Submitting Ratings
+# How to Submit Ratings
 
-Leaders can submit positional ratings for team members through the mobile PWA. This guide explains the rating process.
+This guide shows you how to submit positional ratings for your team members.
 
-## Who Can Submit Ratings
+## Before You Start
 
-Rating permissions are based on your role and position mappings:
+### Who Can Submit Ratings?
 
-- **Operator** - Can rate all positions
-- **Executive/Director** - Can rate all positions
-- **Team Lead/Trainer** - Can rate positions assigned to their role in Organization Settings
+Your ability to submit ratings depends on your role:
 
-Check with your administrator if you're unsure which positions you can rate.
+- **Leadership roles** can typically rate any position
+- **Supervisory roles** can rate positions they oversee
+- **Role mapping** in settings determines exactly who can rate what
 
-## Accessing the Rating Form
+If you can't see a position in the rating form, check with your administrator about your role permissions.
 
-### Via Mobile PWA
+### When to Rate
 
-1. Open the Levelset PWA on your mobile device
-2. Tap **Submit Rating** or navigate to the ratings section
-3. You'll see the rating form
+Rate team members when you observe them working in a position. Good times include:
 
-### Via QR Code
+- During or after a shift you supervised
+- After watching them handle a rush period
+- When you notice significant improvement or issues
 
-Your location may have QR codes posted that link directly to the rating form.
+<Tip>
+Rate regularly! The more data points, the more accurate the averages become.
+</Tip>
 
-## Submitting a Rating
+## How to Submit a Rating
 
 <Steps>
-  <Step title="Select Position">
-    Choose the position you're rating from the dropdown. You'll see a brief description of the position to confirm you've selected the right one.
+  <Step title="Open the Rating Form">
+    Access the rating form through the mobile app or by navigating to the ratings submission page.
   </Step>
   
-  <Step title="Select Employee">
-    Choose the team member you're rating. Only active employees assigned to the selected position area (FOH/BOH) will appear.
+  <Step title="Select the Position">
+    Choose which position you're rating from the dropdown. You'll see a description of the position to confirm you selected the right one.
+  </Step>
+  
+  <Step title="Select the Employee">
+    Choose the team member you're rating. Only employees assigned to work in that area (FOH or BOH) will appear.
   </Step>
   
   <Step title="Rate Each Criterion">
-    For each of the 5 rating criteria:
-    - Read the criterion name and description
-    - Select a rating: **Not Yet (1)**, **On the Rise (2)**, or **Crushing It (3)**
-    - Consider specific examples of the team member's performance
+    For each of the 5 criteria:
+    
+    1. Read the criterion name and description
+    2. Think about specific examples you observed
+    3. Select your rating:
+       - **1 (Not Yet)** - Still developing this skill
+       - **2 (On the Rise)** - Making progress
+       - **3 (Crushing It)** - Consistently excellent
   </Step>
   
   <Step title="Submit">
-    Review your ratings and tap **Submit**. The rating will be saved and included in the team member's rolling average.
+    Review your ratings and click **Submit**. The rating is saved immediately.
   </Step>
 </Steps>
+
+## Rating Guidelines
+
+### Be Consistent
+
+Apply the same standards to everyone. A "3" should mean the same thing for every team member.
+
+**Ask yourself**: If two people performed identically, would I rate them the same?
+
+### Be Specific
+
+Base your rating on specific behaviors you observed, not general feelings about the person.
+
+**Instead of**: "They're a good worker"  
+**Think about**: "Did they complete orders quickly? Were they accurate? Did they engage with guests?"
+
+### Use the Full Scale
+
+Don't default to all 2s. Give 1s when performance needs work and 3s when it's truly excellent.
+
+- **1** = They're not meeting expectations yet
+- **2** = They're doing okay, room to grow
+- **3** = They're exceeding expectations
+
+### Rate What You Saw
+
+Only rate based on what you actually observed. If you didn't see someone work in a position recently, don't rate them.
+
+## Common Situations
+
+<AccordionGroup>
+  <Accordion title="The employee is having a bad day">
+    Rate what you observed. One lower rating won't significantly impact their average because Levelset uses rolling averages of the last 4 ratings.
+  </Accordion>
+  
+  <Accordion title="I want to change a rating I submitted">
+    You can't edit submitted ratings. If you made a significant error, contact your administrator.
+  </Accordion>
+  
+  <Accordion title="An employee isn't appearing in the list">
+    Check that:
+    - They're assigned to the correct FOH/BOH area
+    - They're marked as Active in the roster
+    - You're looking at the right position
+  </Accordion>
+  
+  <Accordion title="I can't see a position I should be able to rate">
+    Your role may not have permission for that position. Check with your administrator about Role Mapping settings.
+  </Accordion>
+</AccordionGroup>
+
+## What Happens After You Submit
+
+- The rating is saved immediately
+- It's included in the employee's rolling average (last 4 ratings)
+- It appears in the Positional Excellence dashboard
+- Leadership can see all submitted ratings
 
 ## Best Practices
 
 <CardGroup cols={2}>
-  <Card title="Be Consistent" icon="scale-balanced">
-    Apply the same standards across all team members. A "Crushing It" should mean the same thing for everyone.
+  <Card title="Rate Often" icon="calendar-days">
+    Submit ratings regularly to build meaningful data over time
   </Card>
-  
-  <Card title="Rate Regularly" icon="calendar">
-    Submit ratings frequently to build a meaningful picture of performance over time.
+  <Card title="Be Fair" icon="scale-balanced">
+    Apply the same standards to all team members
   </Card>
-  
-  <Card title="Be Specific" icon="bullseye">
-    Think about specific examples of behavior when rating. What did you actually observe?
+  <Card title="Be Timely" icon="clock">
+    Rate while your observations are fresh
   </Card>
-  
-  <Card title="Use the Full Scale" icon="chart-line">
-    Don't hesitate to give 1s or 3s when appropriate. Honest ratings drive real development.
+  <Card title="Be Honest" icon="heart">
+    Accurate ratings help people grow
   </Card>
 </CardGroup>
-
-## Rating Criteria Descriptions
-
-Each criterion has a description that explains what excellence looks like. Read these carefully when rating:
-
-<Tip>
-The criterion description appears below the criterion name in the rating form. Use it as a guide for what to look for.
-</Tip>
-
-## After Submitting
-
-Once submitted:
-
-- The rating is immediately saved to the database
-- It's included in the team member's rolling average (last 4 ratings)
-- It appears in the Positional Excellence dashboard
-- Leadership can see who submitted ratings in the Leadership View
-
-## Troubleshooting
-
-<AccordionGroup>
-  <Accordion title="I can't see a position">
-    Check your role permissions in Organization Settings. You may only have access to certain positions.
-  </Accordion>
-  
-  <Accordion title="An employee is missing">
-    The employee may not be assigned to the correct FOH/BOH area, or they may be inactive in the roster.
-  </Accordion>
-  
-  <Accordion title="I submitted a rating by mistake">
-    Contact your administrator. Ratings can be corrected if needed.
-  </Accordion>
-</AccordionGroup>
