--- a/docs/roster-management/adding-employees.mdx
+++ b/docs/roster-management/adding-employees.mdx
@@ -5,26 +5,32 @@ description: How to add new team members to your roster
 
 # Adding Employees
 
-When a new team member joins, add them to Levelset so they can be included in ratings, scheduling, and other features.
+When someone new joins your team, add them to Levelset so they can be included in ratings, discipline tracking, and reports.
 
-## Adding a New Employee
+## How to Add an Employee
 
 <Steps>
-  <Step title="Open the Roster">
-    Navigate to **Roster** in the main navigation.
+  <Step title="Go to the Roster">
+    Click **Roster** in the navigation menu.
   </Step>
   
   <Step title="Click Add Employee">
-    Look for the **Add Employee** button, typically at the top of the roster table.
+    Look for the **Add Employee** button (usually at the top of the page).
   </Step>
   
-  <Step title="Enter Employee Information">
+  <Step title="Enter Their Information">
     Fill in the required fields:
-    - **First Name** - Employee's first name
-    - **Last Name** - Employee's last name
-    - **Role** - Select their starting role (typically "New Hire" or "Team Member")
-    - **FOH/BOH** - Select their area assignment
-    - **Hire Date** - The date they started
+    
+    **Required:**
+    - First Name
+    - Last Name
+    - Role (their position in the hierarchy)
+    
+    **Optional but recommended:**
+    - Email address
+    - Phone number
+    - Hire date
+    - FOH/BOH assignment
   </Step>
   
   <Step title="Save">
@@ -32,97 +38,86 @@ When a new team member joins, add them to Levelset so they can be included in ra
   </Step>
 </Steps>
 
-## Required vs. Optional Fields
+## Choosing the Right Role
 
-### Required
+When adding someone, select the role that matches their position:
 
-- First Name
-- Last Name
-- Role
-
-### Optional
-
-- Email address
-- Phone number
-- Hire date
-- Availability status
-- FOH/BOH assignment (may default based on role)
-
-## Role Selection
-
-When adding a new employee, consider:
-
-<CardGroup cols={2}>
-  <Card title="New Hire" icon="seedling">
-    Just starting, still in training. Limited to basic permissions.
-  </Card>
-  
-  <Card title="Team Member" icon="user">
-    Completed initial training. Standard team member permissions.
-  </Card>
-</CardGroup>
+| Starting Role | Use For |
+|--------------|---------|
+| New Hire | Just started, still in training |
+| Team Member | Completed initial training |
+| Trainer | Has training responsibilities |
+| Supervisor/Lead | Has supervisory responsibilities |
 
 <Tip>
-Start employees at an appropriate level for their experience. You can always update their role as they progress.
+Start people at the appropriate level for their experience. You can always change their role later as they develop.
 </Tip>
 
-## FOH/BOH Assignment
+## Setting FOH/BOH
 
-Assign employees to the area where they primarily work:
+Choose based on where the person primarily works:
 
-- **FOH (Front of House)** - Guest-facing positions like iPOS, Host, Drinks
-- **BOH (Back of House)** - Kitchen positions like Primary, Breading, Fries
-- **Both** - Some employees may work in both areas
+- **FOH (Front of House)** - Customer-facing roles
+- **BOH (Back of House)** - Kitchen and production roles
+- **Both** - If they work in both areas
 
-This assignment affects:
+This setting determines:
 - Which positions they appear in for ratings
-- Default filters in various views
-- Reporting and analytics
+- How they're filtered in various views
 
-## Bulk Import
+## What Happens After Adding
 
-For adding multiple employees at once:
+Once you add an employee:
 
-1. Check if your organization has bulk import enabled
-2. Download the employee template
-3. Fill in employee information
-4. Upload the completed file
+1. They appear in the roster immediately
+2. They can receive positional ratings
+3. They can have discipline records created
+4. They show up in reports and analytics
 
-Contact your administrator for bulk import instructions specific to your organization.
+## If You Use Automated Sync
 
-## After Adding
+Your organization may sync employees automatically from:
+- HotSchedules
+- Your payroll system
+- Other HR software
 
-Once an employee is added:
-
-- They appear in the roster and all relevant views
-- They can receive positional ratings
-- They can be included in discipline records if needed
-- They appear in reports and analytics
-
-## Syncing with Other Systems
-
-If your organization uses:
-
-- **HotSchedules** - Employees may sync automatically
-- **Payroll systems** - Data may import from your provider
-
-Ask your administrator about automated sync options.
+If automatic sync is enabled:
+- New employees may appear automatically
+- Some information may sync from the other system
+- Ask your administrator about what's automated
 
 ## Common Issues
 
 <AccordionGroup>
-  <Accordion title="Duplicate employee created">
-    If an employee was added twice, contact your administrator to merge or remove the duplicate record.
+  <Accordion title="I accidentally created a duplicate">
+    Contact your administrator to merge or remove the duplicate record.
   </Accordion>
   
-  <Accordion title="Wrong role assigned">
-    You can edit the employee's role directly from the roster. See [Managing Roles](/roster-management/managing-roles).
+  <Accordion title="I selected the wrong role">
+    No problem! You can edit the employee's role from the roster. See [Managing Roles](/roster-management/managing-roles).
   </Accordion>
   
-  <Accordion title="Employee not appearing in ratings">
+  <Accordion title="The new employee isn't showing up in ratings">
     Check that:
     - They have the correct FOH/BOH assignment
-    - Their status is "Active"
-    - They've been assigned to the relevant position
+    - Their status is Active
+    - You've selected the right location
+    - They've been added to your location's roster
+  </Accordion>
+  
+  <Accordion title="I can't find the Add Employee button">
+    You may not have permission to add employees. Check with your administrator about your role permissions.
   </Accordion>
 </AccordionGroup>
+
+## Information You Can Add Later
+
+Not everything needs to be filled in right away. You can always go back and add:
+
+- Email address
+- Phone number
+- Updated role (when promoted)
+- FOH/BOH changes
+- Other details
+
+Just click on the employee in the roster to edit their information.
