--- a/docs/organization-settings/positions.mdx
+++ b/docs/organization-settings/positions.mdx
@@ -1,173 +1,151 @@
 ---
-title: Positions
-description: Set up and manage positions for positional ratings
+title: Managing Positions
+description: How to set up and configure positions for ratings
 ---
 
-# Positions
+# Managing Positions
 
-Positions define the roles team members can work and be rated on. Each position has a name, description, and FOH/BOH assignment.
+Positions are the specific jobs team members work and get rated on. This guide shows you how to manage them.
 
-## Accessing Positions
+## Accessing Position Settings
 
 1. Go to **Organization Settings**
-2. Select **Positional Excellence** in the left menu
-3. Click the **Positions** tab
+2. Click **Positional Excellence** in the sidebar
+3. Select the **Positions** tab
 
 ## Understanding Positions
 
-### What is a Position?
+### What Is a Position?
 
-A position represents a specific job function in your restaurant:
+A position represents a specific job function:
 
-- **iPOS** - Taking orders at the register
-- **Host** - Greeting guests and managing the dining room
-- **Breading** - Breading chicken products
-- **Fries** - Managing waffle fry production
+**Front of House (FOH)**
+- Register/iPOS
+- Drive-Thru
+- Dining Room/Host
+- Drinks/Beverages
+
+**Back of House (BOH)**
+- Grill/Primary
+- Prep
+- Fries
+- Expeditor
+
+Your organization can define any positions that make sense for your operation.
 
 ### FOH vs BOH
 
-Positions are categorized as:
+Each position belongs to one or both categories:
 
-- **FOH (Front of House)** - Customer-facing roles
-- **BOH (Back of House)** - Kitchen and production roles
+- **FOH** = Customer-facing roles
+- **BOH** = Kitchen/production roles
 
-Some positions may be marked as both if they span areas.
+This categorization:
+- Filters which employees appear for each position in ratings
+- Organizes positions in the dashboard
+- Helps with reporting
 
-## Managing Positions
-
-### Adding a Position
+## How to Add a Position
 
 <Steps>
-  <Step title="Click Add Position">
-    Find the **Add Position** button below the existing positions.
+  <Step title="Find the Add Button">
+    Look for **Add FOH Position** or **Add BOH Position** below the existing positions.
   </Step>
   
-  <Step title="Enter Position Name">
-    Type the name of the position (e.g., "Expeditor", "Drive-Thru")
+  <Step title="Enter the Position Name">
+    Type a clear, short name (e.g., "Drive-Thru", "Grill", "Expeditor").
   </Step>
   
-  <Step title="Set FOH/BOH">
-    Check the appropriate boxes for where this position belongs.
-  </Step>
-  
-  <Step title="Add Description">
-    Write a description explaining what this position does. This appears when leaders submit ratings.
+  <Step title="Add a Description">
+    Write a description explaining what this position does. This shows up in the rating form.
   </Step>
   
   <Step title="Save">
-    Click away from the description field to auto-save, or click **Save Changes**.
+    The position saves automatically when you click away, or click **Save Changes**.
   </Step>
 </Steps>
 
-### Editing a Position
+## How to Edit a Position
 
 1. Find the position in the list
-2. Click on the name or description field to edit
+2. Click on the name or description field
 3. Make your changes
-4. Changes auto-save when you click away
+4. Click away to save (auto-saves)
 
-### Removing a Position
+## How to Remove a Position
 
-1. Click the delete icon (trash) next to the position
+1. Click the **delete icon** (trash can) next to the position
 2. Confirm the deletion
 
 <Warning>
-Deleting a position removes it from future ratings. Historical ratings for that position are preserved but the position won't appear in new rating submissions.
+Deleting a position removes it from future ratings. Historical ratings are preserved, but the position won't appear in new rating submissions.
 </Warning>
 
-## Position Descriptions
+## Writing Good Position Descriptions
 
-Good position descriptions help leaders rate accurately:
+The description helps raters understand what the position involves. Include:
 
-<CardGroup cols={2}>
-  <Card title="Be Specific" icon="bullseye">
-    Describe exactly what the position does day-to-day.
-  </Card>
-  
-  <Card title="Include Key Responsibilities" icon="list">
-    List the main tasks someone in this position handles.
-  </Card>
-  
-  <Card title="Set Expectations" icon="star">
-    Explain what excellence looks like in this role.
-  </Card>
-  
-  <Card title="Keep It Scannable" icon="eye">
-    Use short paragraphs or bullet points for easy reading.
-  </Card>
-</CardGroup>
+- **Main responsibilities** - What does this person do?
+- **Key tasks** - What activities should you look for?
+- **Excellence indicators** - What does great performance look like?
 
 ### Example Description
 
 ```
-The Primary Team owns the sandwich production side of the centerline. 
-Together, they build every sandwich with speed, precision, and excellence.
+Grill Team
 
-Primary 1: Assembles and labels sandwiches
-Primary 2: Prepares buns and pickles  
-Primary 3: Builds deluxe setups, manages produce & cheeses
+Responsible for all cooked proteins. During service:
+- Cook chicken filets and nuggets to spec
+- Maintain proper holding times
+- Keep station organized and stocked
+- Communicate timing with expeditor
 
-During peak, all three move as one — fast, fluid, and focused 
-on getting quality sandwiches out the chute.
+Excellence means consistent cook quality, 
+fast recovery during rushes, and zero food safety issues.
 ```
 
-## Default Positions
+## Reordering Positions
 
-When you first set up Levelset, common restaurant positions are included:
+Drag and drop positions to change their order:
 
-**FOH Positions:**
-- iPOS
-- Host
-- Drinks
-- Bagging
-- Runner
-- OMD (Order Management)
+1. Hover over the **drag handle** (the lines on the left)
+2. Drag the position up or down
+3. Release to set the new position
 
-**BOH Positions:**
-- Primary
-- Secondary
-- Machines
-- Breading
-- Prep
-- Fries
+The order affects how positions appear in dropdowns and lists.
 
-You can customize these or add new ones as needed.
+## Language Support
 
-## Positions and Rating Criteria
+If your team includes Spanish speakers:
 
-Each position needs rating criteria defined in the **Rating Criteria** tab. After adding a position:
+1. Switch the language toggle to **Español**
+2. Enter the Spanish name and description
+3. Use the **Auto-translate** button to translate from English
 
-1. Go to the **Rating Criteria** tab
-2. Select the new position from the dropdown
-3. Define the 5 rating criteria
+## After Adding a Position
 
-See [Rating Criteria](/organization-settings/rating-criteria) for details.
+When you add a new position, you also need to:
 
-## Positions and Role Mapping
+1. **Define rating criteria** - Go to the Rating Criteria tab and set up the 5 criteria
+2. **Set up role mapping** - Go to Role Mapping to determine who can rate this position
 
-Control which roles can rate each position in the **Role Mapping** tab:
-
-1. Go to the **Role Mapping** tab
-2. Find the position in the list
-3. Select which roles can submit ratings for that position
-
-See [Roles](/organization-settings/roles) for more on role configuration.
+Without rating criteria, the position won't appear in rating forms.
 
 ## Troubleshooting
 
 <AccordionGroup>
-  <Accordion title="Position not appearing in rating form">
+  <Accordion title="Position doesn't appear in the rating form">
     Check that:
-    - The position has rating criteria defined
-    - The user's role has permission to rate that position
-    - The position is marked as active
+    - The position has all 5 rating criteria defined
+    - The user's role has permission to rate it (Role Mapping)
+    - The position is active (not deleted)
   </Accordion>
   
   <Accordion title="Can't delete a position">
-    Positions with historical ratings cannot be fully deleted. Contact support if you need to hide a position.
+    Positions with historical ratings can't be fully deleted to preserve data integrity. Contact support if you need to hide a position.
   </Accordion>
   
-  <Accordion title="Description not saving">
-    Ensure you click outside the text field to trigger the auto-save. If issues persist, try clicking the Save Changes button explicitly.
+  <Accordion title="Changes aren't saving">
+    Click outside the text field to trigger auto-save. If issues persist, try clicking **Save Changes** explicitly or refreshing the page.
   </Accordion>
 </AccordionGroup>
