--- a/docs/organization-settings/roles.mdx
+++ b/docs/organization-settings/roles.mdx
@@ -1,189 +1,161 @@
 ---
-title: Roles
-description: Configure the role hierarchy for your organization
+title: Roles Settings
+description: How to configure the role hierarchy for your organization
 ---
 
-# Roles
+# Roles Settings
 
-Roles define the permission hierarchy in your organization. Configure role names, order, and colors in this settings area.
+Roles define the permission hierarchy in your organization. This guide shows you how to configure them.
 
-## Accessing Roles
+## Accessing Roles Settings
 
 1. Go to **Organization Settings**
-2. Select **Roles** in the **Users and Security** section
-
-![Roles settings page showing role hierarchy with tier levels, colors, and employee counts](/images/screenshots/org-settings-roles.png)
+2. Click **Roles** under Users and Security
 
 ## Understanding the Role Hierarchy
 
-Roles are organized from highest to lowest permission level:
+Roles are organized in order of permission level:
 
-| Level | Default Role | Purpose |
-|-------|-------------|---------|
-| 0 | Operator | Owner/operator with full access |
-| 1 | Executive | Senior leadership |
-| 2 | Director | Department leadership |
-| 3 | Team Lead | Shift supervision |
-| 4 | Trainer | Training responsibilities |
-| 5 | Team Member | Standard team member |
-| 6 | New Hire | Recently hired, in training |
+- **Level 0** (top) = Highest permissions (usually Operator/Owner)
+- Higher numbers = Lower permissions
+- Each level has different capabilities
+
+### Example Hierarchy
+
+```
+Level 0: Operator (full access)
+Level 1: Director (leadership access)
+Level 2: Manager (management access)
+Level 3: Supervisor (team access)
+Level 4: Trainer (training access)
+Level 5: Team Member (basic access)
+Level 6: New Hire (minimal access)
+```
 
 <Note>
-You can rename roles to match your organization's terminology. The hierarchy level is what determines permissions.
+You can name roles whatever makes sense for your organization. The hierarchy level is what determines permissions.
 </Note>
+
+## What You'll See
+
+The Roles page shows:
+
+- **Role name** - What you call this role
+- **Color** - Visual identifier for the role
+- **Employee count** - How many people have this role
+- **Hierarchy position** - Where it sits in the order
 
 ## Managing Roles
 
-### Renaming a Role
+### Rename a Role
 
-1. Click on the role name field
+1. Click on the role name
 2. Type the new name
 3. Click away to save
 
-### Reordering Roles
+### Change Role Colors
 
-Drag and drop roles to change their position in the hierarchy:
+1. Click the **colored circle** next to a role
+2. Select a new color from the palette
+3. The color updates immediately
 
-1. Hover over the drag handle (≡) on the left side of a role
+Colors help visually identify roles throughout Levelset.
+
+### Reorder Roles
+
+1. Hover over the **drag handle** (lines on the left)
 2. Drag the role up or down
 3. Release to set the new position
 
 <Warning>
-The Operator role (level 0) cannot be moved. It's always at the top of the hierarchy.
+The top role (Operator) cannot be moved. It's always at the highest permission level.
 </Warning>
 
-### Changing Role Colors
+### Add a New Role
 
-Each role has an assigned color:
-
-1. Click the color circle next to a role
-2. Select a new color from the palette
-3. The color updates immediately
-
-Colors appear on role badges throughout Levelset for quick visual identification.
-
-### Adding a New Role
-
-1. Click **Add Role** at the bottom of the list
+1. Click **Add Role** at the bottom
 2. Enter the role name
-3. Drag it to the appropriate position in the hierarchy
+3. Drag it to the right position in the hierarchy
 4. Select a color
 
-### Deleting a Role
+### Delete a Role
 
-1. Click the delete icon (trash) next to a role
+1. Click the **delete icon** next to the role
 2. Confirm the deletion
 
 <Warning>
-You cannot delete the Operator role or any role that has employees assigned to it. Reassign employees first if needed.
+You cannot delete a role that has employees assigned to it. Reassign those employees first.
 </Warning>
 
-## Role Permissions
+## How Roles Affect Permissions
 
-Higher-level roles have more permissions:
+### Dashboard Access
 
-<Tabs>
-  <Tab title="Level 0 (Operator)">
-    - Full access to all features
-    - Can manage all settings
-    - Can access all locations
-    - Cannot be deleted or demoted
-  </Tab>
-  
-  <Tab title="Level 1-2 (Executive/Director)">
-    - Dashboard access
-    - Can submit ratings and discipline
-    - Can manage team members below their level
-    - Limited settings access
-  </Tab>
-  
-  <Tab title="Level 3+ (Team Lead and below)">
-    - Limited dashboard access (if any)
-    - Mobile app access
-    - Can submit ratings for assigned positions
-    - Cannot change roles or settings
-  </Tab>
-</Tabs>
+| Level | Typical Access |
+|-------|---------------|
+| 0 | Full access to everything |
+| 1-2 | Full dashboard, most settings |
+| 3+ | Limited or no dashboard access |
+
+### Roster Management
+
+- You can change roles for people **below** your level
+- You cannot promote someone to your level or above
+- Operators can change any role
+
+### Rating Permissions
+
+Role Mapping settings determine which roles can rate which positions. Higher roles typically have more rating access.
+
+### Discipline Access
+
+Discipline Access settings control which roles can view and submit infractions.
 
 ## Role Colors
 
-The 10 available colors are:
+Available colors include:
 
-| Color | Hex | Best For |
-|-------|-----|----------|
-| Green | #dcfce7 | Positive roles, new hires |
-| Blue | #dbeafe | Standard roles |
-| Red | #fee2e2 | Alert or special roles |
-| Amber | #fef3c7 | Mid-level leadership |
-| Purple | #f3e8ff | Senior leadership |
-| Teal | #ccfbf1 | Support roles |
-| Pink | #fce7f3 | Unique designations |
-| Grey | #f3f4f6 | Neutral roles |
-| Black | #374151 | High contrast |
-| Indigo | #e0e7ff | Alternative leadership |
+| Color | Best Used For |
+|-------|---------------|
+| Green | Entry-level, new hires |
+| Blue | Standard team members |
+| Purple | Leadership, management |
+| Red | Alerts or special designations |
+| Yellow/Amber | Mid-level roles |
+| Teal | Support roles |
+| Gray | Neutral designations |
 
-When adding a new role, a unique color is automatically assigned (avoiding duplicates when possible).
-
-## How Roles Affect the System
-
-Roles control access throughout Levelset:
-
-### Roster Management
-- Higher roles can change roles of those below them
-- You cannot promote someone to your level or above
-
-### Ratings
-- Role Mapping determines which roles can rate which positions
-- Higher roles typically can rate more positions
-
-### Discipline
-- Discipline Access controls which roles can submit infractions
-- View access may also be role-dependent
-
-### Dashboard Access
-- Typically only levels 0-2 have automatic dashboard access
-- Others need to be added as Users explicitly
+Using consistent colors helps people recognize roles at a glance throughout the app.
 
 ## Best Practices
 
 <CardGroup cols={2}>
   <Card title="Keep It Simple" icon="minimize">
-    Don't create too many roles. 5-7 is usually sufficient.
+    5-7 roles is usually enough. Too many creates confusion.
   </Card>
-  
-  <Card title="Match Reality" icon="building">
-    Role names should match what you call positions in your organization.
+  <Card title="Clear Distinctions" icon="code-branch">
+    Each role should have a clear purpose and different permissions
   </Card>
-  
-  <Card title="Clear Distinctions" icon="arrows-left-right">
-    Each role should have a clear purpose and distinct permissions.
+  <Card title="Match Your Culture" icon="building">
+    Use role names that match what you call positions in real life
   </Card>
-  
   <Card title="Consistent Colors" icon="palette">
-    Use colors consistently so they become meaningful at a glance.
+    Once you assign colors, keep them consistent
   </Card>
 </CardGroup>
-
-## Employee Counts
-
-The Roles page shows how many employees are assigned to each role. Use this to:
-
-- Verify your team structure is accurate
-- Identify roles that might need review
-- Plan for promotions and development
 
 ## Troubleshooting
 
 <AccordionGroup>
   <Accordion title="Can't delete a role">
-    Roles with employees assigned cannot be deleted. First, reassign all employees to different roles.
+    Roles with employees assigned cannot be deleted. First, change those employees to a different role in the Roster.
   </Accordion>
   
-  <Accordion title="New role not appearing in roster">
-    After adding a role, refresh the page if it doesn't immediately appear in other areas of the app.
+  <Accordion title="New role isn't showing in the roster">
+    Refresh the page. New roles should appear immediately, but occasionally need a page refresh to show everywhere.
   </Accordion>
   
-  <Accordion title="Role colors not updating">
-    Color changes should be immediate. If colors aren't updating, try refreshing the page.
+  <Accordion title="Permissions aren't working as expected">
+    Check Role Mapping settings for ratings, and Discipline Access settings for discipline. The role hierarchy determines the baseline, but these settings can further customize access.
   </Accordion>
 </AccordionGroup>
