--- a/docs/roster-management/managing-roles.mdx
+++ b/docs/roster-management/managing-roles.mdx
@@ -1,181 +1,159 @@
 ---
 title: Managing Roles
-description: How to update employee roles and understand permissions
+description: How to change employee roles and understand the role hierarchy
 ---
 
 # Managing Roles
 
-Roles in Levelset determine what employees can access and do within the platform. This guide covers how to manage role assignments.
+Roles in Levelset determine what employees can see and do. This guide explains how roles work and how to change them.
 
 ## Understanding the Role Hierarchy
 
-Roles are organized in a hierarchy from highest to lowest permission level:
+Roles are organized from highest to lowest permission level. A typical hierarchy might look like:
 
 ```
-Operator (Level 0)
+Operator (highest)
     ↓
-Executive (Level 1)
+Director/Executive
     ↓
-Director (Level 2)
+Supervisor/Lead
     ↓
-Team Lead (Level 3)
+Trainer
     ↓
-Trainer (Level 4)
+Team Member
     ↓
-Team Member (Level 5)
-    ↓
-New Hire (Level 6)
+New Hire (lowest)
 ```
 
 <Note>
-Your organization may have different role names. The hierarchy is what matters for permissions.
+Your organization may have different role names. What matters is the hierarchy level, not the specific name.
 </Note>
 
-## Changing an Employee's Role
+### Why Hierarchy Matters
 
-### From the Roster
+- Higher roles have more permissions
+- You can only change roles for people **below** your level
+- Dashboard access is typically limited to higher levels
+- Role determines what positions someone can rate
 
-1. Navigate to **Roster**
-2. Find the employee in the table
-3. Click on their current role badge
-4. Select the new role from the dropdown
-5. The change saves automatically
-
-### Who Can Change Roles
-
-Role changes follow a hierarchy rule:
-
-- You can only change roles for employees below your level
-- You cannot promote someone to your level or above
-- Operators can change any role
-- Levelset Admins have full access
-
-## Role Permissions
-
-Each role level has different capabilities:
-
-<Tabs>
-  <Tab title="Operator">
-    - Full access to all features
-    - Can manage all settings
-    - Can change any employee's role
-    - Can access all locations in the organization
-  </Tab>
-  
-  <Tab title="Executive/Director">
-    - View and submit ratings
-    - Access discipline dashboard
-    - Manage team members below their level
-    - Access organization settings (limited)
-  </Tab>
-  
-  <Tab title="Team Lead">
-    - Submit ratings for assigned positions
-    - View team performance data
-    - Limited discipline access (if enabled)
-  </Tab>
-  
-  <Tab title="Trainer">
-    - Submit ratings for positions they train
-    - View relevant performance data
-  </Tab>
-  
-  <Tab title="Team Member/New Hire">
-    - Mobile app access (if enabled)
-    - View own performance data (if enabled)
-  </Tab>
-</Tabs>
-
-## Dashboard Access
-
-Not all roles have access to the Levelset dashboard:
-
-| Role Level | Dashboard Access |
-|------------|------------------|
-| 0-2 (Operator to Director) | Full dashboard access |
-| 3+ (Team Lead and below) | Limited or no dashboard access |
-
-To give someone dashboard access:
-1. Go to **Organization Settings** → **Users**
-2. Click **Add User**
-3. Select the employee and create their login
-
-## Role Colors
-
-Each role has an assigned color for visual identification:
-
-- Colors appear on role badges throughout the platform
-- Customize colors in **Organization Settings** → **Roles**
-- Drag rows to reorder the hierarchy
-- Click the color circle to change a role's color
-
-## Promoting Employees
-
-When promoting an employee:
+## How to Change Someone's Role
 
 <Steps>
-  <Step title="Update their role">
-    Change their role in the roster to reflect their new position.
+  <Step title="Go to the Roster">
+    Click **Roster** in the navigation menu.
   </Step>
   
-  <Step title="Consider dashboard access">
-    If they need dashboard access, add them as a user in Organization Settings.
+  <Step title="Find the Employee">
+    Locate the person whose role you want to change. Use the search box if needed.
   </Step>
   
-  <Step title="Review position permissions">
-    Check Role Mapping in Organization Settings to ensure they can rate appropriate positions.
+  <Step title="Click Their Role Badge">
+    Click on the colored role badge next to their name.
+  </Step>
+  
+  <Step title="Select the New Role">
+    Choose the new role from the dropdown. You'll only see roles that you have permission to assign.
+  </Step>
+  
+  <Step title="Confirm">
+    The change saves automatically. The new role takes effect immediately.
   </Step>
 </Steps>
 
-## Creating New Roles
+## What You Can and Can't Do
 
-If your organization needs additional roles:
+### You CAN:
+- Change roles for employees below your level
+- Promote someone to a level below yours
+- Demote someone to any lower level
 
-1. Go to **Organization Settings** → **Roles**
-2. Click **Add Role**
-3. Enter the role name
-4. Drag to position in the hierarchy
-5. Select a color
+### You CANNOT:
+- Change your own role
+- Promote someone to your level or above
+- Change roles for people at or above your level
 
-<Warning>
-Adding new roles affects permissions across the platform. Coordinate with your team before making changes.
-</Warning>
+### Example
+
+If you're a **Director** (Level 2):
+- ✅ You can change a Team Member to Trainer
+- ✅ You can change a Trainer to Team Member
+- ❌ You cannot make someone a Director
+- ❌ You cannot change another Director's role
+
+## Role Changes and Dashboard Access
+
+Changing someone's role does **NOT** automatically give them dashboard access.
+
+If someone needs to log into Levelset:
+1. Go to **Organization Settings** → **Users**
+2. Add them as a user
+3. They'll receive login credentials
+
+See [Users documentation](/organization-settings/users) for details.
+
+## Role Changes and Ratings
+
+When you change someone's role, their ability to submit ratings may change:
+
+- **Promotion** might give them access to rate more positions
+- **Demotion** might limit which positions they can rate
+- Role Mapping settings determine exactly who can rate what
+
+## When to Change Roles
+
+### Promotions
+
+Change someone's role when they:
+- Take on new responsibilities
+- Complete a development program
+- Move into a supervisory position
+
+### Demotions
+
+Role changes down may happen when:
+- Responsibilities are reduced
+- Someone steps back from a leadership role
+- Performance issues require a change
+
+### Corrections
+
+Change roles if:
+- Someone was initially assigned the wrong role
+- The role structure has been updated
 
 ## Best Practices
 
 <CardGroup cols={2}>
-  <Card title="Regular Reviews" icon="calendar-check">
-    Review role assignments periodically to ensure they reflect current responsibilities.
+  <Card title="Communicate First" icon="comments">
+    Tell the person before changing their role, especially for promotions
   </Card>
-  
-  <Card title="Clear Criteria" icon="list-check">
-    Define what each role means in your organization so promotions are consistent.
+  <Card title="Be Consistent" icon="scale-balanced">
+    Apply the same criteria for role changes across your team
   </Card>
-  
-  <Card title="Document Changes" icon="file-lines">
-    Keep notes on why role changes were made, especially for promotions.
+  <Card title="Document Why" icon="file-lines">
+    Keep notes on why role changes were made
   </Card>
-  
-  <Card title="Train on Access" icon="graduation-cap">
-    When someone is promoted, ensure they understand their new access and responsibilities.
+  <Card title="Check Access" icon="key">
+    After a promotion, verify they have the system access they need
   </Card>
 </CardGroup>
 
 ## Troubleshooting
 
 <AccordionGroup>
-  <Accordion title="I can't change an employee's role">
-    Check that:
-    - The employee is at a lower level than you
-    - You're not trying to promote them to or above your level
-    - You have the appropriate permissions
+  <Accordion title="I can't change someone's role">
+    They're probably at or above your level in the hierarchy. Only people below your level can have their roles changed by you.
   </Accordion>
   
-  <Accordion title="New role isn't showing the right permissions">
-    Role permissions may need to be configured. Check Organization Settings → Role Mapping for position access, and ensure dashboard users are set up correctly.
+  <Accordion title="The role I want isn't in the dropdown">
+    You can only assign roles below your own level. If you need to assign a higher role, ask someone with more permissions.
   </Accordion>
   
-  <Accordion title="Employee can't access the dashboard after promotion">
-    Changing someone's role doesn't automatically give dashboard access. You need to add them as a user in Organization Settings → Users.
+  <Accordion title="They were promoted but can't access the dashboard">
+    Role changes don't automatically grant login access. Add them as a user in Organization Settings → Users.
+  </Accordion>
+  
+  <Accordion title="Their role changed but they can't rate positions they should">
+    Check the Role Mapping settings in Organization Settings → Positional Excellence to ensure their new role has access to the right positions.
   </Accordion>
 </AccordionGroup>
